--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script  src="./script.js"></script>
-
+    <script src="script.js"></script>
   </body>
 </html>
