--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,10 @@
     <div id="root"></div>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="script.js"></script>
+ 
+    <script src="js/jquery.scrolly.min.js"></script>
+    <script src="js/breakpoints.min.js"></script>
+    <script src="js/util.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
